--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,11 @@ version: '2'
 services:
   web:
     build: .
-    image: ambercr.io
+    image: amberframework
     command: 'amber watch'
     working_dir: /app/user
     environment:
-      DATABASE_URL: postgres://admin:password@db:5432/ambercr.io_development
+      DATABASE_URL: postgres://admin:password@db:5432/amberframework_development
       SMTP_URL: mail:1025
     ports:
       - '3000:3000'
@@ -19,11 +19,11 @@ services:
 
   migrate:
     build: .
-    image: ambercr.io
+    image: amberframework
     command: bash -c 'while ! nc -q 1 db 5432 </dev/null; do sleep 1; done && amber migrate up'
     working_dir: /app/user
     environment:
-      DATABASE_URL: postgres://admin:password@db:5432/ambercr.io_development
+      DATABASE_URL: postgres://admin:password@db:5432/amberframework_development
     volumes:
       - '.:/app/user'
     depends_on:
@@ -40,7 +40,7 @@ services:
     environment:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: password
-      POSTGRES_DB: ambercr.io_development
+      POSTGRES_DB: amberframework_development
     volumes:
       - 'db:/var/lib/postgres/data'
 
