Add website enhancements (#35)
* Add some updates

- Update Crystal
- Update Docker
- Update shards
- Remove binaries

* Add some design enchancements

- Update Amber version
-  Update Dockerfile
- Add some custom styles to improve accesibility
- Remove unused images
- Update Error handling
- Remove some unused html

* Remove colored log on production

* Update Dockerfile

* Update text data

* Add feature content

* Documentation enhancements

- Add permalinks
- Add documentation not found message
- Fix accesibility on sidebar menu button
- Clean index content.

* Ignore .directory file

* More enhancements

- Optimize assets
- Add titles
- Remove unused files

* Remove Session and Flash handlers

* Add new enhancements.

- Add basic static blog functionality.
- Add some clases to avoid repetitive CSS
- Publish blog post.
- Remove some unused CSS classes
- Disable smoothScroll

* Add amber-spec

* Fix amber-spec

* Remove amber_spec

* Update development dependencies

* Add link on blog post contentto latest amber release

* Blog enhancements

* Add h1 to page

This commit is fixxing Missing first level heading because current page does not have a first level heading.

* Fixes listed suggestions

- Add helper to avoid repetitive code
- Add missing line break


Former-commit-id: 10791bcd07c2919166e1b5088db7e510e42ba895

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
 /doc/
-/libs/
 /lib/
 /.crystal/
 /.shards/
+/.vscode/
 .env
+.amber_secret_key
+production.yml
+.DS_Store
+node_modules
 amberframework
+app
+.directory
