--- a/shard.yml
+++ b/shard.yml
@@ -11,7 +11,7 @@ license: MIT
 dependencies:
   amber:
     github: amberframework/amber
-    branch: master
+    version: 0.3.0
 
 #  granite_orm:
 #    github: kemalyst/granite-orm
