New blog design based on TheSaaS theme
Former-commit-id: 9838a85274bcbc89dea23c7dfc78b05634245606

--- a/blog/posts.yml
+++ b/blog/posts.yml
@@ -1,17 +1,20 @@
 title: Amber 0.3.0 has been released including enhancements and bug fixes
 file: blog/2017/10/18/amber-0.3.0-has-been-released-including-enhancements-and-bug-fixes.md
+image: amber-vintage-1.jpg
 date: Oct 18, 2017
 author: Massimiliano Bertinetti
 profile: https://github.com/codelessfuture
 ---
 title: Amber 0.2.7 has been released including enhancements and bug fixes
 file: blog/2017/10/11/amber-0.2.7-has-been-released-including-enhancements-and-bug-fixes.md
+image: amber-vintage-2.jpg
 date: Oct 11, 2017
 author: Faustino Aguilar
 profile: https://github.com/faustinoaq
 ---
 title: New website for Amber Framework
 file: blog/2017/10/07/new-website-for-amber-framework.md
+image: default.jpg
 date: Oct 07, 2017
 author: Faustino Aguilar
 profile: https://github.com/faustinoaq
