Specify LICENSE and remove more dead code
Former-commit-id: 0ff82c7287eacbe0099445e12b071937a193dbc7

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Amber Framework",
   "private": true,
   "author": "Amber",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "build": "webpack --config config/webpack/development.js",
     "watch": "webpack -w --config config/webpack/development.js",
