New blog post (#58)
* First draft of new blog post

* Remove title from blog post

It is pulled from the yaml file.

* Update November blog post to January (including title)

* Update Nov. blog post for the new year

* Change title and fix typo

* Update title and header


Former-commit-id: 8a600b4c2eb91dba096340fd50b463094e849287

--- a/blog/posts.yml
+++ b/blog/posts.yml
@@ -1,3 +1,10 @@
+title: Amber - 2017 in Review
+file: blog/2018/01/08/amber-new-releases-new-year.md
+image: /assets/img/snow-canyon-isaac-sloan-tiny.png
+date: Jan 08, 2018
+author: Mark Siemers
+profile: https://github.com/marksiemers
+---
 title: Amber 0.3.0 has been released including enhancements and bug fixes
 file: blog/2017/10/18/amber-0.3.0-has-been-released-including-enhancements-and-bug-fixes.md
 image: https://i.imgur.com/Teu757M.jpg
