production env should run on port 80
Former-commit-id: 42a3ceee2aaf69b03578b391ad1d6831f3f9c0c4

--- a/config/environments/production.yml
+++ b/config/environments/production.yml
@@ -1,4 +1,4 @@
-port: 8080
+port: 80
 name: amberframework.org
 logging:
   severity: info
@@ -12,5 +12,5 @@ logging:
     - 
 
 host: 0.0.0.0
-port_reuse: true
+port_reuse: false
 process_count: 1
