--- a/shard.yml
+++ b/shard.yml
@@ -11,8 +11,8 @@ license: MIT
 dependencies:
   amber:
     github: amberframework/amber
-    version: 0.6.1
+    version: 0.6.7
 
 development_dependencies:
-  amber_spec:
-    github: amberframework/amber-spec
+  garnet_spec:
+    github: amberframework/garnet-spec
